[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://who_asks_satan/who asks satan.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://epische-melodie-fur-musik-oder-videos-8898.mp3" type="AudioStream" id=3]
[ext_resource path="res://icon2.png" type="Texture" id=4]
[ext_resource path="res://unmute.png" type="Texture" id=5]
[ext_resource path="res://mute.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 150
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=2]
script/source = "extends TextureButton


"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.5
margin_top = 20.0
margin_right = 182.5
margin_bottom = 157.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "go fast"
align = 1

[node name="Button" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -41.0
margin_right = 76.5
margin_bottom = 41.0
text = "PLAY"

[node name="Button2" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.667
anchor_right = 0.5
anchor_bottom = 0.667
margin_left = -39.0
margin_top = -39.2
margin_right = 39.0
margin_bottom = 17.8
text = "OPTION"

[node name="Button3" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.822
anchor_right = 0.5
anchor_bottom = 0.822
margin_left = -39.0
margin_top = -10.2
margin_right = 39.0
margin_bottom = 9.79999
text = "EXIT"

[node name="Button4" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.743
anchor_right = 0.5
anchor_bottom = 0.743
margin_left = -66.0
margin_top = -13.8
margin_right = 67.0
margin_bottom = 14.2
text = "how to play"

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
margin_left = 62.0
margin_top = 259.0
margin_right = 266.0
margin_bottom = 449.0
texture = ExtResource( 4 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 0.933333, 0.898039, 0.898039, 1 )
anchor_top = 0.933
anchor_bottom = 0.933
margin_top = 0.200012
margin_right = 56.0
margin_bottom = 36.2
toggle_mode = true
pressed = true
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
script = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -153.0
margin_top = -31.0
text = "Gabriel Jordan-Riendeau
A21"

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ColorRect/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]
